deploy: 0c21f5d50310210c5e3a774290e7dae67c7cb44e

--- a/anna.html
+++ b/anna.html
@@ -14,19 +14,19 @@
 <body>
 <div class="container">
 <div class="header" id="header">
-<iframe src="/header.html" frameborder="0" width="100%" height="100px">
+<iframe src="header.html" frameborder="0" width="100%" height="100px">
 </iframe>
 </div>
 <div class="row">
 <div class="toc" id="table-of-contents">
-<iframe src="/contents.html" frameborder="0" height="800px">
+<iframe src="contents.html" frameborder="0" height="800px">
 </iframe>
 </div>
 
 
 <div class="document" id="farmer-anna">
 <h1 class="title">Farmer Anna</h1>
-<img alt="Anna driving a tractor." class="align-right" src="/_files/anna.jpg" style="height: 300px;" />
+<img alt="Anna driving a tractor." class="align-right" src="_files/anna.jpg" style="height: 300px;" />
 <p>She's got big dreams and a dab hand with a steam shovel.</p>
 <div class="line-block">
 <div class="line"><strong>Player</strong>: Mary</div>
