--- a/maddie.html
+++ b/maddie.html
@@ -14,19 +14,19 @@
 <body>
 <div class="container">
 <div class="header" id="header">
-<iframe src="/header.html" frameborder="0" width="100%" height="100px">
+<iframe src="header.html" frameborder="0" width="100%" height="100px">
 </iframe>
 </div>
 <div class="row">
 <div class="toc" id="table-of-contents">
-<iframe src="/contents.html" frameborder="0" height="800px">
+<iframe src="contents.html" frameborder="0" height="800px">
 </iframe>
 </div>
 
 
 <div class="document" id="maddie-cakes">
 <h1 class="title">Maddie Cakes</h1>
-<img alt="A flapper brandishing twin pistols." class="align-right" src="/_files/maddie.png" style="height: 300px;" />
+<img alt="A flapper brandishing twin pistols." class="align-right" src="_files/maddie.png" style="height: 300px;" />
 <p>Someone you'd like to have in your corner in a tight spot.</p>
 <div class="line-block">
 <div class="line"><strong>Player</strong>: Tammy</div>
