deploy: de0f1b1306f72e3d7a09decdbce6fe81062c7575

--- a/maddie.html
+++ b/maddie.html
@@ -25,7 +25,7 @@
 
 <div class="document" id="maddie-cakes">
 <h1 class="title">Maddie Cakes</h1>
-<img alt="A flapper brandishing twin pistols." class="align-right" src="_files/maddie.png" style="height: 300px;" />
+<img alt="Maddie wielding a flashlight." class="align-right" src="_files/maddie.png" style="height: 300px;" />
 <p>Someone you'd like to have in your corner in a tight spot.</p>
 <div class="line-block">
 <div class="line"><strong>Player</strong>: Tammy</div>
