deploy: d4c3ef92ab9b069c00b44f7fd5490a29b83b7330

--- a/corbitt.html
+++ b/corbitt.html
@@ -25,6 +25,7 @@
 
 <div class="document" id="the-haunting-of-the-corbitt-house">
 <h1 class="title">The Haunting of the Corbitt House</h1>
+<img alt="A cartoon depiction of the Corbitt house by Jason Thompson - SPOILERS!" class="align-center" src="_files/corbitt_house.png" style="height: 300px;" />
 <p>Started on March 27, 2021 and Completed on June 5, 2021.</p>
 </div>
 </div>
