--- a/dcc_mcc_sc.html
+++ b/dcc_mcc_sc.html
@@ -28,6 +28,7 @@
 <p><em>Dungeon Crawl Classics</em> and <em>Mutant Crawl Classics</em> are new interpretations of venerable classics published by Goodman Games. Good humor and fun are a big part of what they offer.</p>
 <div class="section" id="dungeon-crawl-classics">
 <h1>Dungeon Crawl Classics</h1>
+<img alt="DCC RPG cover image - a warrior facing looking across a chasm at a strange door set into a cliff face." class="align-right" src="_files/dcc_rpg.png" style="height: 150px;" />
 <p>Inspired by Dungeons and Dragons.</p>
 </div>
 <div class="section" id="mutant-crawl-classics">
