--- a/startrek.html
+++ b/startrek.html
@@ -25,6 +25,7 @@
 
 <div class="document" id="star-trek-adventures">
 <h1 class="title">Star Trek Adventures</h1>
+<img alt="Star Trek Adventures Core Rulebook - A Vulcan, an Andorian, and a human investigate a glowing artifact with a ruined cityscape in the background." class="align-center" src="_files/star_trek.png" style="height: 300px;" />
 <p>Cinematic style role playing game covering all of the televised eras of <em>Star Trek</em>.</p>
 </div>
 </div>
