--- a/wanderhome.html
+++ b/wanderhome.html
@@ -25,7 +25,8 @@
 
 <div class="document" id="wanderhome">
 <h1 class="title">Wanderhome</h1>
-<p>A story telling game reminiscent of the <em>Wind in the Willows</em>.</p>
+<img alt="A painting of a mole leading a frog and a rabbit through a meadow with a mountain in the background." class="align-center" src="_files/wanderhome.png" style="height: 300px;" />
+<p>A story telling game reminiscent of the <em>Wind in the Willows</em>. This is unlike any game I've played before, but it has a lovely, calming feel to it. Players start with <em>playbooks</em> that provide ideas of how to roleplay their characters. It's all improv from there. And there's no dice. The players determine everything that happens with their imagination.</p>
 </div>
 </div>
 </div>
