--- a/dcc_mcc_sc.html
+++ b/dcc_mcc_sc.html
@@ -25,11 +25,18 @@
 
 <div class="document" id="dungeon-crawl-classics-and-mutant-crawl-classics">
 <h1 class="title">Dungeon Crawl Classics and Mutant Crawl Classics</h1>
+<img alt="DCC RPG cover image - a warrior facing looking across a chasm at a strange door set into a cliff face." class="align-center" src="_files/dcc_rpg.png" style="height: 300px;" />
 <p><em>Dungeon Crawl Classics</em> and <em>Mutant Crawl Classics</em> are new interpretations of venerable classics published by Goodman Games. Good humor and fun are a big part of what they offer.</p>
 <div class="section" id="dungeon-crawl-classics">
 <h1>Dungeon Crawl Classics</h1>
-<img alt="DCC RPG cover image - a warrior facing looking across a chasm at a strange door set into a cliff face." class="align-right" src="_files/dcc_rpg.png" style="height: 150px;" />
 <p>Inspired by Dungeons and Dragons.</p>
+<div class="section" id="ready-to-play-adventures">
+<h2>Ready to play adventures</h2>
+<ol class="arabic simple">
+<li>Shadow of the Beakmen - the less said the better.</li>
+<li>The Queen of Elfland's Son - SPOILER: He's not a good guy.</li>
+</ol>
+</div>
 </div>
 <div class="section" id="mutant-crawl-classics">
 <h1>Mutant Crawl Classics</h1>
