deploy: 713fda0e5def9023ba7c70e29161a80b920f43c9

--- a/dcc_mcc_sc.html
+++ b/dcc_mcc_sc.html
@@ -25,7 +25,7 @@
 
 <div class="document" id="dungeon-crawl-classics-and-mutant-crawl-classics">
 <h1 class="title">Dungeon Crawl Classics and Mutant Crawl Classics</h1>
-<img alt="DCC RPG cover image - a warrior facing looking across a chasm at a strange door set into a cliff face." class="align-center" src="_files/dcc_rpg.png" style="height: 300px;" />
+<a class="reference external image-reference" href="https://goodman-games.com/store/dungeon-crawl-classics/"><img alt="DCC RPG cover image - a warrior facing looking across a chasm at a strange door set into a cliff face." class="align-center" src="_files/dcc_rpg.png" style="height: 300px;" /></a>
 <p><em>Dungeon Crawl Classics</em> and <em>Mutant Crawl Classics</em> are new interpretations of venerable classics published by Goodman Games. Good humor and fun are a big part of what they offer.</p>
 <div class="section" id="dungeon-crawl-classics">
 <h1>Dungeon Crawl Classics</h1>
