--- a/cthulhu.html
+++ b/cthulhu.html
@@ -25,7 +25,7 @@
 
 <div class="document" id="call-of-cthulhu">
 <h1 class="title">Call of Cthulhu</h1>
-<img alt="Call of Cthulhu cover image - a great old one emerges from the sea, looming menacingly over a foundering fishing boat." class="align-center" src="_files/cthulhu.png" style="height: 300px;" />
+<a class="reference external image-reference" href="https://www.chaosium.com/call-of-cthulhu-rpg/"><img alt="Call of Cthulhu cover image - a great old one emerges from the sea, looming menacingly over a foundering fishing boat." class="align-center" src="_files/cthulhu.png" style="height: 300px;" /></a>
 <p>Resources for our Call of Cthulhu game.</p>
 <div class="section" id="characters">
 <h1>Characters</h1>
