--- a/expanse.html
+++ b/expanse.html
@@ -25,7 +25,7 @@
 
 <div class="document" id="the-expanse">
 <h1 class="title">The Expanse</h1>
-<img alt="Cover of the Expanse RPG - Triptych with Avasarala speaking at a podium, Naomi in a crash couch on the Roci, and a Martian Marine (Bobby?) leading a squad on the surface of Mars." class="align-center" src="_files/the_expanse.png" style="height: 300px;" />
+<a class="reference external image-reference" href="https://greenroninstore.com/collections/the-expanse-rpg"><img alt="Cover of the Expanse RPG - Triptych with Avasarala speaking at a podium, Naomi in a crash couch on the Roci, and a Martian Marine (Bobby?) leading a squad on the surface of Mars." class="align-center" src="_files/the_expanse.png" style="height: 300px;" /></a>
 <p>Based in equal parts on the series of novels from James S. A. Corey and the Amazon TV series inspired by it.</p>
 </div>
 </div>
