--- a/frontier.html
+++ b/frontier.html
@@ -25,7 +25,7 @@
 
 <div class="document" id="frontier-space">
 <h1 class="title">Frontier Space</h1>
-<img alt="Frontier Space Player's Handbook cover - A human and a pair of aliens holding their ground with their crashed ship burning in the background." class="align-center" src="_files/frontier_space.png" style="height: 300px;" />
+<a class="reference external image-reference" href="https://dwdstudios.com/frontierspace"><img alt="Frontier Space Player's Handbook cover - A human and a pair of aliens holding their ground with their crashed ship burning in the background." class="align-center" src="_files/frontier_space.png" style="height: 300px;" /></a>
 <p>A new take inspired by <em>Star Frontiers</em> published by TSR in the 1980s.</p>
 </div>
 </div>
