deploy: 13041e72a16236a366a39a04783de2c37bd25736

--- a/everway.html
+++ b/everway.html
@@ -26,7 +26,7 @@
 
 <div class="document" id="everway">
 <h1 class="title">Everway</h1>
-<a class="reference external image-reference" href="https://www.everway.com"><img alt="Everway cover image - a woman who might be a mystic looks into the distance while holding an exotic black cat." class="align-center" src="_files/everway.png" style="height: 300px;" /></a>
+<a class="reference external image-reference" href="https://www.everway.com"><img alt="Everway cover image - a woman with a gold nimbus glowing behind her, looks into the distance while holding an exotic black cat." class="align-center" src="_files/everway.png" style="height: 300px;" /></a>
 <p>Resources for a possible Everway game.</p>
 <div class="section" id="fortune-cards">
 <h1>Fortune Cards</h1>
