--- a/2300.html
+++ b/2300.html
@@ -28,7 +28,7 @@
 <h1 class="title">2300 AD</h1>
 <a class="reference external image-reference" href="https://www.mongoosepublishing.com/us/rpgs/2300ad.html"><img alt="2300 AD revised cover image - space explorers atop a ridge facing an alien sunset." class="align-right" src="_files/2300_ad.png" style="height: 300px;" /></a>
 <p>Based on one of the most venerable Sci-Fi RPGs around (Traveller - 1977), this revival eschews a far future setting for a closer and more familiar future with all the problems and possibilities that entails.</p>
-<p>300 years from now, the world has recovered from the Twilight, though little is known about the period following the third world war. Humanity has left the cradle of Earth and found new opportunities for exploration and, sadyly, exploitation among the nearby stars. We've also discovered that we are not alone. You are a Traveller, trying to make your way and maybe even your mark. There are plenty of hard knocks ahead, friends to be made, and most importantly adventure.</p>
+<p>300 years from now, the world has recovered from the Twilight, though little is known about the period following the third world war. Humanity has left the cradle of Earth and found new opportunities for exploration and, sadly, exploitation among the nearby stars. We've also discovered that we are not alone. You are a Traveller, trying to make your way and maybe even your mark. There are plenty of hard knocks ahead, friends to be made, and most importantly adventure.</p>
 <p>Here's a list of flims and television shows that have a similar flavor to this setting:</p>
 <ul class="simple">
 <li>Blade Runner</li>
